# BeaconBaseTest

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FARCASTER_INTEGRATION_PLAN.md  LICENSE  README.md  SECURITY.md
.github/workflows/: release.yml
migrations/: 001_agent_manifests.sql  002_farcaster_scans.sql
miniapp/: package-lock.json  package.json  vite.config.ts
miniapp/public/.well-known/: farcaster.json
miniapp/src/: App.css  App.tsx  index.css
miniapp/src/components/: AgentCard.tsx  AgentSearch.tsx  GenerateForm.tsx  PaymentFlow.tsx  ValidateForm.tsx
miniapp/src/hooks/: useBeaconApi.ts  useFarcasterContext.ts
miniapp/src/lib/: api.ts  farcaster.ts
src/: db.rs  errors.rs  generator.rs  inferrer.rs  main.rs  models.rs  tests.rs  validator.rs  verifier.rs
src/farcaster/: api.rs  bot.rs  github_scanner.rs  mod.rs  neynar.rs
