[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
rand = "0.8"
once_cell = "1.19"
