[package]
name = "beacon"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.1"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
rand = "0.8"
once_cell = "1.19"
tower-http = { version = "0.5", features = ["fs", "cors"] }
url = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ethers = { version = "2", features = ["ws"] }
base64 = "0.22"
postgrest = "1"
ethers-core = { version = "2.0.14" }
ethers-providers = { version = "2.0.14", features = ["rustls"] }
redis = { version = "0.25", features = ["tokio-comp"] }
